partially closing feature #2362 From "Component" to "Application" (EN)

--- a/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/external/filesharing/multilang/fileSharingBundle_en.properties
@@ -37,7 +37,7 @@ fileSharing.updateTicket = Update a ticket
 fileSharing.createTicket = Create a ticket
 fileSharing.deleteTicket = Delete a ticket
 fileSharing.fileId = File ID
-fileSharing.componentId = Component id
+fileSharing.componentId = Application id
 fileSharing.versioning = Versioning
 fileSharing.creationDate = Create
 fileSharing.by = by
