--- a/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/importExportPeas/multilang/importExportPeasBundle_en.properties
@@ -27,12 +27,12 @@ importExportPeas.ImportDescriptor 		= XML descriptor
 importExportPeas.Import 				= Launch import
 
 importExportPeas.StatGlobal				= Global statistics
-importExportPeas.StatComponent			= Statistics by component
+importExportPeas.StatComponent			= Statistics by application
 
 importExportPeas.ImportDuration			= Duration
 importExportPeas.NbFilesImported		= Number of imported files
 importExportPeas.NbFilesNotFound		= Number of inaccessible files
-importExportPeas.Composant				= Component
+importExportPeas.Composant				= Application
 
 importExportPeas.NbPubCreated			= Number of publications created
 importExportPeas.NbPubUpdated			= Number of publications updated
