--- a/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/pdcSubscription/multilang/pdcsubscription_en.properties
@@ -25,7 +25,7 @@ notification.title = New publication classified
 standartMessage = New publication classified in one of your Centers of Interest.
 Space    = Workspace: 
 Subscription = Center of Interest: 
-Service  = KM Service: 
+Service  = Application: 
 Date     = Date: 
 URL      = Link: 
 Axis     = Topic: 
