--- a/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/portlets/multilang/portletsBundle_en.properties
@@ -28,7 +28,7 @@ portlets.portlet.lastPublis.pref.nbPublis = Number of publications to display
 portlets.portlet.lastPublis.pref.maxAge = Maximum age for publications (in days)
 portlets.portlet.lastPublis.pref.displayDescription = Display the description
 portlets.portlet.lastPublis.error = You must enter a number between 0 and 30!
-portlets.portlet.lastPublis.help = This portlet displays the last publications created or modified in the different document manager services.<br/>You can modify the number of publications to be displayed.
+portlets.portlet.lastPublis.help = This portlet displays the last publications created or modified in the different document manager applications.<br/>You can modify the number of publications to be displayed.
 
 portlets.portlet.nextEvents.pref.nbEvents = Number of events to display
 portlets.portlet.nextEvents.error = You must enter a number between 0 and 30!
@@ -42,7 +42,7 @@ portlets.portlet.myCheckOutFiles.help = This portlet displays all your currently
 portlets.portlet.myTodos.help = This portlet displays all the tasks yet to be completed.
 portlets.portlet.quickInfos.help = This portlet displays all the current news.
 
-portlets.portlet.componentInstance.help = This portlet displays a portal component. If you do not have access rights, an error message will be displayed.
+portlets.portlet.componentInstance.help = This portlet displays a portal application. If you do not have access rights, an error message will be displayed.
 portlets.portlet.componentInstance.error.accessForbidden = Access forbidden!
 portlets.portlet.componentInstance.pref.instanceId = Component id
 
