--- a/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/workflowdesigner/multilang/workflowDesignerBundle_en.properties
@@ -33,7 +33,7 @@ instance of which might be executed by the Workflow Engine. \\n\
 Do you really want to continue?   
 workflowDesigner.Either = Either
 workflowDesigner.or = or
-workflowDesigner.editor.componentDescriptor = Generating a Component Descriptor 
+workflowDesigner.editor.componentDescriptor = Generating the application descriptor 
 workflowDesigner.component.parameters = Please enter descriptor attributes:
 workflowDesigner.component.labelSelection = Please select the language of the profiles' labels:
 
@@ -115,7 +115,7 @@ workflowDesigner.add.state = Add State
 workflowDesigner.add.title = Add Title
 workflowDesigner.addWorkflow = Add Workflow
 workflowDesigner.importWorkflow = Import Workflow
-workflowDesigner.generate.componentDescriptor = Generate Component Descriptor
+workflowDesigner.generate.componentDescriptor = Generate application descriptor
 
 # Filed & column names
 workflowDesigner.action = Action
@@ -195,7 +195,7 @@ User Data represents user's directory.
 workflowDesigner.help.toolName = Workflow Designer is a tool that: <ul>\
 <li>Allows quick and intuitive modification of workflow model.</li>\
 <li>Guarantees the validity of the resulting model.</li>\
-<li>Can automatically generate a component descriptor corresponding to the model.</li>\
+<li>Can automatically generate an application descriptor corresponding to the model.</li>\
 <li>Allows modifying a workflow that is being executed.</li></ul>
 
 workflowDesigner.help.workflowHeader = This screen allows: <ul> \
@@ -203,12 +203,12 @@ workflowDesigner.help.workflowHeader = This screen allows: <ul> \
 <li>Entering the name of the XML file where the workflow is stored. \
     Once entered cannot be changed any more.</li>\
 <li>Adding labels and descriptions.</li>\
-<li>Generating or updating component descriptor file related to the current workflow.</li></ul>
+<li>Generating or updating application descriptor file related to the current workflow.</li></ul>
 
 workflowDesigner.help.componentDescriptor = This screen allows: <ul>\
-<li>Entering the component label, required.</li>\
-<li>Entering the component description, required.</li>\
-<li>Selecting the language and the labels of component profiles.</li></ul>
+<li>Entering the application label, required.</li>\
+<li>Entering the application description, required.</li>\
+<li>Selecting the language and the labels of application profiles.</li></ul>
 
 workflowDesigner.help.action = This screen allows: <ul> \
 <li>Entering the action name, required.</li>\
