--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationUser/multilang/notificationUserBundle_en.properties
@@ -54,7 +54,7 @@ address=Address
 operations=Operations
 libelle=Label
 requiredFields=Mandatory
-component=Service
+component=Application
 default=Default
 description=Message
 method=Method
