--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/pdcPeas/multilang/pdcBundle_en.properties
@@ -136,7 +136,7 @@ pdcPeas.SortValueSearch.5 = Last update date
 pdcPeas.SortValueSearch.6 = Location
 pdcPeas.SortValueSearch.7 = Popularity
 pdcPeas.DomainSelect = Workspace:
-pdcPeas.ComponentSelect = Service:
+pdcPeas.ComponentSelect = Application:
 pdcPeas.AuthorSelect = Publisher:
 pdcPeas.CreateAfterDate = Published after :
 pdcPeas.UpdateAfterDate = Updated after :
@@ -280,7 +280,7 @@ pdcpeas.didYouMean= Did You mean  :
 
 # Facet group search message
 pdcPeas.group.author= Author
-pdcPeas.group.service= Service
+pdcPeas.group.service= Application
 pdcPeas.group.tooltip.enable= Click to show only '{0}' results
 pdcPeas.group.tooltip.disable= Click to cancel '{0}' filter results
 
