--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/portlet/multilang/portletBundle_en.properties
@@ -44,5 +44,5 @@ portlet.HelloSilverpeas.title = Welcome
 portlet.MyBookmarks.title = My bookmarks
 portlet.MyCheckOutFiles.title = My locked files
 portlet.QuickInfos.title = News
-portlet.ComponentInstance.title = A component
+portlet.ComponentInstance.title = An application
 portlet.IFrame.title = IFrame
