--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/silverStatisticsPeas/multilang/silverStatisticsBundle_en.properties
@@ -47,9 +47,9 @@ silverStatisticsPeas.ConnectionNumberOfDistinctUsers = Number of distinct users 
 silverStatisticsPeas.LoginNumber 		 = Number of connections
 silverStatisticsPeas.AccessNumber	 	 = Access distribution
 silverStatisticsPeas.ToSpace	 	 	 = to space
-silverStatisticsPeas.JobPeas	 	 	 = Services
-silverStatisticsPeas.ServicesNumber	 	 = Type of service distribution
-silverStatisticsPeas.InstancesNumber	 	 = Service number
+silverStatisticsPeas.JobPeas	 	 	 = Applications
+silverStatisticsPeas.ServicesNumber	 	 = Type of application distribution
+silverStatisticsPeas.InstancesNumber	 	 = Application number
 silverStatisticsPeas.VolumeNumber	 	 = Publication distribution
 silverStatisticsPeas.VolumeDocsNumber	 	 = Attached file distribution
 silverStatisticsPeas.FromSpace	 	 	 = from the space
@@ -63,7 +63,7 @@ silverStatisticsPeas.Historique                  = History
 silverStatisticsPeas.Access                  	 = Access
 silverStatisticsPeas.EvolutionAccessDeb 	 = Access history 
 silverStatisticsPeas.EvolutionAccessSpace 	 = , space
-silverStatisticsPeas.EvolutionAccessService 	 = , service
+silverStatisticsPeas.EvolutionAccessService 	 = , application
 silverStatisticsPeas.EvolutionAccessGroup 	 = for the group
 silverStatisticsPeas.EvolutionAccessUser 	 = for the user
 silverStatisticsPeas.ClearUserPanelPeas 	 = Clear filter
