--- a/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/clipboard/multilang/clipboard_en.properties
@@ -27,7 +27,7 @@ clipboard = Clipboard
   retour = Back
 // attribut
   titre = Title
-  composant = Service
+  composant = Application
   information = Information
   dateDebut = Start Date
   dateFin = End Date
