--- a/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/homePage/multilang/homePageBundle_en.properties
@@ -32,7 +32,7 @@ AdministrationStat = Statistics
 SpaceEntreprise = Company workspace
 SpaceCollaboration = Collaborative workspaces
 SpacePersonal = Personal workspace
-Component = Service
+Component = Application
 AxisCollaboration = Categories of
 AxisEmpty = no PDC
 
@@ -105,8 +105,8 @@ BackToMainPage = Home Page
 BackToMainPageSpace = Workspace's home page
 
 navigationView = Navigation
-byComponent = By Service
-bySpace = By Workspace
+byComponent = By application
+bySpace = By workspace
 
 reductExtend = Reduct / Extend
 
