--- a/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/multilang/generalMultilang_en.properties
@@ -50,7 +50,7 @@ GML.category	 					= Category
 GML.cellularPhoneNumber 	                        = Cellular Phone
 GML.close						= Close
 GML.company 						= Company
-GML.component                                           = KM Service
+GML.component                                           = Application
 GML.copy 						= Copy
 GML.create						= Create
 GML.createPublication			                = New publication
@@ -91,7 +91,7 @@ GML.homePhoneNumber 			                = Home Phone
 
 GML.insertHere						= Insert here
 
-GML.jobPeas						= Service
+GML.jobPeas						= Application
 
 GML.keyWords						= Keywords
 GML.kmmanager                   = Classification scheme Manager
@@ -302,7 +302,7 @@ GML.mandatory = Mandatory
 GML.and = and
 GML.reset = Reset
 
-GML.operations.setupComponent = Setup this service
+GML.operations.setupComponent = Setup this application
 
 GML.to = to
 GML.at = at
