--- a/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/webactiv/util/versioning/multilang/versioning_en.properties
@@ -30,7 +30,7 @@ notification.pleaseValidate = Please validate document!
 
 versioning.DocumentName = Document
 versioning.Space = Space
-versioning.Component = KM Service
+versioning.Component = Application
 versioning.Date = Date
 versioning.URL = URL
 
@@ -41,7 +41,7 @@ versioning.EJB_NoSuchFindElement = Impossible to find the versioning
 versioning.EJB_NoRemoveElement = Impossible to remove the versioning
 versioning.EJB_NoLoadElement = Impossible to charge the versioning
 versioning.EJB_NoConnection = Impossible to close the connexion with the data base
-versioning.AC_NoInitVersioningHome = Impossible to obtain the home interface component
+versioning.AC_NoInitVersioningHome = Impossible to obtain the home interface application
 versioning.AC_NoCreateVersioningDetail = Impossible to create the versioning
 versioning.AC_NoFindAttachementDetail = Impossible to find the versioning
 versioning.AC_NoDeleteVersioningDetail = Impossible to delete the versioning
