--- a/config-core/src/main/config/silvertrace/messages/versioningMessages_en.properties
+++ b/config-core/src/main/config/silvertrace/messages/versioningMessages_en.properties
@@ -54,7 +54,7 @@ versioning.VALIDATION_NOT_REQUIED = Validation not requested or user has no righ
 
 versioning.URL      = URL of the document: 
 versioning.Space    = Document WorkSpace: 
-versioning.Service  = Document Service: 
+versioning.Service  = Document application: 
 versioning.Date     = Date: 
 
 versioning.CHECKIN_FAILED = Error during checkin of the file
