--- a/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobSearchPeas/multilang/jobSearchPeasBundle_en.properties
@@ -26,7 +26,7 @@ JSP.searchTab = Search
 JSP.searchField = Id or Name (except publications)
 JSP.search = Search
 JSP.space = Spaces / subspaces
-JSP.service = Services
+JSP.service = Applications
 JSP.publication = Publications
 JSP.group = Groups / subgroups of users
 JSP.user = Users
