--- a/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/jobStartPagePeas/multilang/jobStartPagePeasBundle_en.properties
@@ -28,11 +28,11 @@ JSPP.homepageType = Type of startup page
 JSPP.main = Main page
 JSPP.manageHomePage = Workspaces
 
-JSPP.peas = Service
+JSPP.peas = Application
 JSPP.portlet = Portlet
 JSPP.webPage = URL
 
-JSPP.selectPeas = Select a service
+JSPP.selectPeas = Select an application
 JSPP.spaceHomePage = Workspace startup page
 
 JSPP.update = Edit
@@ -61,10 +61,10 @@ JSPP.SpaceProfilePanelCreateTitle = Select users for the profile
 JSPP.SpaceProfilePanelModifyTitle = Modify users for the profile
 JSPP.SpaceProfilePanelDeleteTitle = Delete users for the profile
 
-JSPP.ComponentPanelCreateTitle = Add a service
-JSPP.ComponentPanelModifyTitle = Modify a service
-JSPP.ComponentPanelDeleteTitle = Delete a service
-JSPP.CopyComponent = Copy the service
+JSPP.ComponentPanelCreateTitle = Add an application
+JSPP.ComponentPanelModifyTitle = Modify an application
+JSPP.ComponentPanelDeleteTitle = Delete an application
+JSPP.CopyComponent = Copy the application
 JSPP.PasteComponent = Paste
 
 JSPP.SubSpacePanelCreateTitle = Create a sub-space
@@ -79,7 +79,7 @@ JSPP.ModifyStartPage = Modify the homepage
 JSPP.creationSpace = Create a space
 JSPP.creationSubSpace = Create a sub-space
 JSPP.updateSpace = Update a space
-JSPP.creationInstance = Add a service
+JSPP.creationInstance = Add an application
 JSPP.roleDescription = Role description
 
 //erreurs
@@ -94,7 +94,7 @@ JSPP.MustBeginsByHTTP = must contain an URL starting with http:// or https://
 JSPP.MessageSuppressionSpaceBegin = Do you really want to delete this space?\\n\\n-->
 JSPP.MessageSuppressionSpaceEnd = <--\\n
 JSPP.MessageSuppressionSpaceManager = Do you really want to delete these users? 
-JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this service?\\n\\n-->
+JSPP.MessageSuppressionInstanceBegin = Do you really want to delete this application?\\n\\n-->
 JSPP.MessageSuppressionInstanceEnd = <--\\n
 
 //onglets roles
@@ -108,38 +108,38 @@ JSPP.reader = Readers
 JSPP.SpaceOrder = Move space 
 JSPP.SpacePlace = Move before the space
 JSPP.PlaceLast = Move to the end
-JSPP.ComponentOrder = Move service 
-JSPP.ComponentPlace = Move before the service
+JSPP.ComponentOrder = Move application 
+JSPP.ComponentPlace = Move before the application
 
-// order space, component
-JSPP.SpacePosition = Display component
+// order space, application
+JSPP.SpacePosition = Display application
 JSPP.NoSpacePosition = Select position
 JSPP.SpacePositionFirst = After space
 JSPP.SpacePositionLast = Before space
 
-// Copy/Cut/Paste component
+// Copy/Cut/Paste application
 JSPP.CopyOf = Copy of 
 
 // Deplacement de composant
 JSPP.SpaceIn = Move in the space
 JSPP.SpacesNotInMaintenance = The origin and destination space must be in Maintenance mode...
-JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this component in this space?
-JSPP.ExistingComponentName = Move not allowed. A component already has the same name in the destination space.
+JSPP.MessageConfirmMovingComponentInSpace = Do you really want to move this application in this space?
+JSPP.ExistingComponentName = Move not allowed. An application already has the same name in the destination space.
 JSPP.movingInProgress = Move in progress...
 
 //Sauvegarde
-JSPP.BackupUnlimited = Backup/Restore components
-JSPP.BackupSpace = Backup/Restore space's components
+JSPP.BackupUnlimited = Backup/Restore applications
+JSPP.BackupSpace = Backup/Restore space's applications
 
-JSPP.ErrorComponentCreation = Error during the creation of the component 
-JSPP.ErrorComponentUpdate = Error during the updating of the component 
-JSPP.ErrorComponentMessage = Check that another component of the space does not already have the same name!
+JSPP.ErrorComponentCreation = Error during the creation of the application 
+JSPP.ErrorComponentUpdate = Error during the updating of the application 
+JSPP.ErrorComponentMessage = Check that another application of the space does not already have the same name!
 JSPP.ErrorSpaceCreation = Error during the creation of the space 
 JSPP.ErrorSpaceUpdate = Error during the updating of the space 
 JSPP.ErrorSpaceMessage = Check that another space on the same level does not already have the same name!
 
 //Corbeille
-JSPP.Bin = Spaces and components bin
+JSPP.Bin = Spaces and applications bin
 JSPP.BinRemoveDate = Remove date
 JSPP.BinRestore = Restore
 JSPP.BinRestoreSelected = Do you really want to restore the selected items?
@@ -155,9 +155,9 @@ JSPP.localRights = Local rights
 JSPP.inheritedRights = Inherited rights
 
 JSPP.inheritanceSpaceNotUsed = This sub-space does not inherit the space's rights.
-JSPP.inheritanceComponentNotUsed = This component does not inherit the space's rights.
+JSPP.inheritanceComponentNotUsed = This application does not inherit the space's rights.
 JSPP.inheritanceSpaceUsed = This subspace inherits the space's rights.
-JSPP.inheritanceComponentUsed = This component inherits the space's rights.
+JSPP.inheritanceComponentUsed = This application inherits the space's rights.
 JSPP.click = Click
 JSPP.here = here
 JSPP.inheritanceToNotUse = to not use the space's rights.
