--- a/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
+++ b/config-core/src/main/config/properties/com/silverpeas/mylinks/multilang/myLinksBundle_en.properties
@@ -22,7 +22,7 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 myLinks.links = Favorits links
-myLinks.linksByComponent = Links by composant
+myLinks.linksByComponent = Links by application
 myLinks.createLink = > Create a link
 myLinks.updateLink = > Update a link
 myLinks.addLink = Add a link
@@ -33,4 +33,4 @@ myLinks.operation = Operations
 myLinks.deleteLinks = Delete selected links
 myLinks.deleteSelection = Do you really want to delete selected links?
 myLinks.messageConfirm = The link has been added to your favorites
-myLinks.retour = Return to the component
+myLinks.retour = Return to the application
