--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/notificationserver/channel/smtp/multilang/smtpBundle_en.properties
@@ -21,6 +21,6 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
-clickBelow = Click here to access the KM Service :
+clickBelow = Click here to access to the application :
 clickHere = Click here
 ToAccessDocument = to access to this document. 
