--- a/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
+++ b/config-core/src/main/config/properties/com/stratelia/silverpeas/personalizationPeas/multilang/personalizationBundle_en.properties
@@ -43,7 +43,7 @@ browseBar_Path4 = Modify the notification channel
 type= Type
 usage = Use
 adresse = Contact
-composant = Service
+composant = Application
 notif_type = Type of notification
 dest = Method
 default = Default
